<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaTarea">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="377dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/TextNombre"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/text_nombre"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/TextDesc"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="@string/text_desc"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TextFecha"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_fecha"
                android:inputType="date"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/TextPrioridad"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_prio"
                android:inputType="textPersonName"
                android:textColorHint="@color/black" />
        </LinearLayout>

        <EditText
            android:id="@+id/TextCoste"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:ems="10"
            android:hint="@string/text_coste"
            android:inputType="number"
            android:textColorHint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="89dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/button_registrar" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/button_cancelar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>